--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "open-react-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://zaqttack.github.io/officer-elections",
+  "homepage": "https://zaqttack.github.io/officer-elections/",
   "dependencies": {
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
