--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://zaqttack.github.io/officer-elections/",
   "dependencies": {
     "classnames": "^2.2.6",
+    "gh-pages": "^3.1.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
