--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "open-react-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://zaqttack.github.io/officer-elections/",
+  "homepage": "http://president.zaquariah.dev/",
   "dependencies": {
     "classnames": "^2.2.6",
     "gh-pages": "^3.1.0",
