--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "open-react-template",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://zaqttack.github.io/officer-elections/",
   "dependencies": {
     "classnames": "^2.2.6",
-    "gh-pages": "^3.1.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
@@ -37,6 +37,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.2.3"
   }
 }
